<resources>
    <string name="app_name">Inventory App</string>

    <!-- Label for overflow menu option that inserts fake data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All</string>

    <!-- Title for the activity to add a new item [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_inventory">Add Inventory</string>
    <string name="editor_activity_title_edit_inventory">Edit Inventory</string>

    <!-- Label for editor menu option to save and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current item [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Product Details</string>

    <!-- List of suppliers available in spinner [CHAR LIMIT=30] -->
    <string name="supplier_1">Supplier 1</string>
    <string name="supplier_2">Supplier 2</string>
    <string name="supplier_3">Supplier 3</string>
    <string name="supplier_unknown">Unknown</string>

    <string name="category_quantity">Quantity</string>
    <string name="category_supplier">Supplier</string>
    <string name="category_supplier_phone">Supplier Phone Number</string>
    <string name="category_product_name">Product Name</string>
    <string name="category_price">Price</string>

    <string name="hint_item_quantity">Quantity</string>
    <string name="hint_item_price">0.00</string>
    <string name="hint_supplier_phone">000-000-0000</string>
    <string name="hint_product_name">Name of product</string>
    <string name="hint_price">0.00</string>
    <string name="editor_insert_inventory_failed">There was a problem adding inventory!</string>
    <string name="editor_insert_inventory_successful">Inventory saved successfully!</string>

    <!-- Title text for the empty view -->
    <string name="empty_view_title_text">It\'s empty in here...</string>

    <!-- Subtitle text for the empty view  -->
    <string name="empty_view_subtitle_text">Use the button below to add some inventory!</string>

    <!-- Toast message in editor when inventory has been successfully updated -->
    <string name="editor_update_inventory_successful">Inventory updated</string>
    <!-- Toast message in editor when inventory has failed to be updated -->
    <string name="editor_update_inventory_failed">Error with updating inventory!</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current item was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_successful">Inventory deleted</string>

    <!-- Toast message in editor when current item has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_failed">Error with deleting item</string>

    <!-- Dialog message to ask the user to confirm deleting [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this item?</string>

    <!-- Dialog message to ask the user to confirm deleting [CHAR LIMIT=NONE] -->
    <string name="delete_all_dialog_msg">Delete ALL inventory?</string>

    <!-- Dialog button text for the option to confirm deleting[CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <string name="sale">Sale</string>

    <string name="unknown">Unknown</string>

    <string name="add_edit_button">Add Item</string>

    <string name="call_button">Call Supplier Now</string>

    <string name="increase">Increase (+)</string>
    <string name="decrease">Decrease (-)</string>
    <string name="quantity_too_small">\"You cannot have less than 0 quantity!</string>


</resources>
